# Nanami

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  rust-toolchain.toml
nanami/: Cargo.toml
nanami/servers/: Makefile  README.md  mkinitramfs.sh
nanami/servers/.cargo/: config.toml
nanami/servers/apps/block-device-server/: _Cargo.toml
nanami/servers/apps/cpp-hello/: Makefile
nanami/servers/apps/eg-test/: Cargo.toml
nanami/servers/apps/ext2-server/: Cargo.toml
nanami/servers/apps/fb-server/: Cargo.toml
nanami/servers/apps/honoka/: Cargo.toml  (+1 more)
nanami/servers/apps/honoka-client/: Cargo.toml
nanami/servers/apps/image-viewer/: Cargo.toml
nanami/servers/apps/image-viewer/src/: main.rs
nanami/servers/apps/net-server/: Cargo.toml
nanami/servers/apps/net-server/src/: main.rs
nanami/servers/apps/net-server/src/app/: arp.rs  dhcp.rs  dns.rs  ethernet.rs  icmp.rs  ip.rs  tcp.rs  udp.rs  util.rs
nanami/servers/apps/rust-hello/: Cargo.toml
nanami/servers/apps/rust-hello/src/: main.rs
nanami/servers/apps/shell/: Cargo.toml
nanami/servers/apps/shell/src/: file.rs  main.rs
nanami/servers/apps/shell/src/app/: font.rs
nanami/src/: main.rs  nanami_core.rs  nanami_utils.rs
nanami/src/nanami_core/: alpha.rs  capability_space.rs  communication.rs  cpio.rs  elf_loader.rs  kernel_object.rs  memory.rs  physical_allocator.rs  process.rs  vm_space.rs
nanami/src/nanami_drivers/: display.rs
nanami/src/nanami_utils/: avl.rs  descriptor.rs  heap.rs  log.rs  static_avl.rs
scripts/: build-image.sh  create-ext2-image.sh  run-qemu.sh
targets/: x86_64-unknown-a9n.json
(+94 files in other folders)
